sources = [
    'SODPlayer-app.lua',
    'SODPlayer-duration.lua',
    'SODPlayer-keys.lua',
    'SODPlayer-menus.lua',
    'SODPlayer-preferences.lua',
    'SODPlayer-recents.lua',
    'SODPlayer-statusicon.lua',
    'SODPlayer-subtitles.lua',
    'SODPlayer-toolbar.lua',
    'SODPlayer-video.lua',
    'SODPlayer-volume.lua'
]

install_data(
    sources,
    install_dir: join_paths(get_option('datadir'), 'sodplayer/components'),
)